<resources>
    <string name="app_name">RxJavaSamples</string>
    <string name="operators">Operators</string>
    <string name="simple">Simple</string>
    <string name="do_the_operation">do the operation</string>
    <string name="create">Create</string>
    <string name="defer">defer</string>
    <string name="from">from</string>
    <string name="interval">Interval</string>
    <string name="range">Range</string>
    <string name="repeat">repeat</string>
    <string name="timer">Timer</string>
    <string name="buffer">Buffer</string>
    <string name="map">Map</string>
    <string name="flatmap">flatmap</string>
    <string name="concatmap">concatmap</string>
    <string name="switchmap">switchmap</string>
    <string name="groupby">groupby</string>
    <string name="scan">scan</string>
    <string name="debounce">debounce</string>
    <string name="distinct">distinct</string>
    <string name="elementsat">ElementsAt</string>
    <string name="filter">filter</string>
    <string name="ignore">Ignore</string>
    <string name="skip">skip</string>
    <string name="take">take</string>
    <string name="combine">combine</string>
    <string name="join">join</string>
    <string name="merge">merge</string>
    <string name="concat">concat</string>
    <string name="zip">zip</string>
    <string name="cache">Cache</string>
    <string name="rxbus">Rxbus</string>
    <string name="helloworld">HelloWorld</string>
    <string name="publicsubject">PublicSubject</string>
    <string name="replaysubject">replaysubject</string>
    <string name="asyncsubject">asyncsubject</string>
    <string name="behavioursubject">behaviourSubject</string>
    <string name="result">result</string>
    <string name="search">search</string>
</resources>
