<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/margin_20">

    <Button
        android:onClick="startOperatorsActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operators"/>
    <Button
        android:onClick="startCacheActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cache"/>
    <Button
        android:onClick="startRxBusActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rxbus"/>
    <Button
        android:onClick="searchActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"/>


</LinearLayout>